# panlabel

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTRUCTIONS.md  README.md  ROADMAP.md  dist-workspace.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  publish-crates.yml  publish-pypi.yml  release.yml
assets/: coco_annotations.json  coco_sample.json  tensorflow_od_sample.csv  tfod_annotations.csv
benches/: microbenches.rs
docs/: README.md  cli.md  contributing.md  conversion.md  formats.md  fuzzing.md  tasks.md
docs/agents/: domain.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/automl_vision_csv_parse/: seed_valid.csv
fuzz/corpus/bdd100k_json_parse/: seed_valid.json
fuzz/corpus/cityscapes_json_parse/: seed_valid.json
fuzz/corpus/cloud_annotations_json_parse/: seed_valid.json
fuzz/corpus/coco_json_parse/: minimal_valid.json  with_annotation.json
fuzz/corpus/createml_json_parse/: minimal_valid.json  with_annotation.json
fuzz/corpus/cvat_xml_parse/: seed_valid.xml
fuzz/corpus/datumaro_json_parse/: seed_valid.json
fuzz/corpus/edge_impulse_labels_parse/: seed_valid.labels
fuzz/corpus/ir_json_parse/: seed.json
fuzz/corpus/kaggle_wheat_csv_parse/: seed_valid.csv
fuzz/corpus/kitti_txt_parse/: seed_valid.txt
fuzz/corpus/label_studio_json_parse/: seed.json
fuzz/corpus/labelbox_json_parse/: seed_valid.json
fuzz/corpus/labelme_json_parse/: seed_polygon.json  seed_rectangle.json
fuzz/corpus/marmot_xml_parse/: seed_valid.xml
fuzz/corpus/oidv4_txt_parse/: seed_valid.txt
fuzz/corpus/openimages_csv_parse/: seed_valid.csv
fuzz/corpus/openlabel_json_parse/: seed_valid.json
fuzz/corpus/retinanet_csv_parse/: seed_valid.csv
fuzz/corpus/sagemaker_manifest_parse/: seed_valid.jsonl
fuzz/corpus/scale_ai_json_parse/: seed_valid.json
fuzz/corpus/superannotate_json_parse/: seed_valid.json
fuzz/corpus/supervisely_json_parse/: seed_valid.json
fuzz/corpus/tfod_csv_parse/: seed.csv
fuzz/corpus/tfrecord_parse/: seed_invalid.tfrecord  seed_valid.tfrecord
fuzz/corpus/udacity_csv_parse/: seed_valid.csv
fuzz/corpus/unity_perception_json_parse/: seed_valid.json
fuzz/corpus/v7_darwin_json_parse/: seed_valid.json
fuzz/corpus/via_csv_parse/: seed_valid.csv
fuzz/corpus/via_json_parse/: seed_valid.json
fuzz/corpus/vott_csv_parse/: seed_valid.csv
fuzz/corpus/vott_json_parse/: seed_valid.json
fuzz/corpus/wider_face_txt_parse/: seed_valid.txt
fuzz/corpus/yolo_keras_txt_parse/: seed_valid.txt
fuzz/corpus/yolo_label_line_parse/: seed.txt  seed_6token.txt  seed_7token_reject.txt
fuzz/fuzz_targets/: automl_vision_csv_parse.rs  bdd100k_json_parse.rs  cityscapes_json_parse.rs  cloud_annotations_json_parse.rs  coco_json_parse.rs  createml_json_parse.rs  cvat_xml_parse.rs  datumaro_json_parse.rs  edge_impulse_labels_parse.rs  ir_json_parse.rs  kaggle_wheat_csv_parse.rs  kitti_txt_parse.rs  label_studio_json_parse.rs  labelbox_json_parse.rs  labelbox_ndjson_parse.rs  labelme_json_parse.rs  marmot_xml_parse.rs  oidv4_txt_parse.rs  openimages_csv_parse.rs  openlabel_json_parse.rs  retinanet_csv_parse.rs  sagemaker_manifest_parse.rs  scale_ai_json_parse.rs  superannotate_json_parse.rs  supervisely_json_parse.rs  tfod_csv_parse.rs  tfrecord_parse.rs  udacity_csv_parse.rs  unity_perception_json_parse.rs  v7_darwin_json_parse.rs  via_csv_parse.rs  via_json_parse.rs  voc_xml_parse.rs  vott_csv_parse.rs  vott_json_parse.rs  wider_face_txt_parse.rs  yolo_keras_txt_parse.rs  yolo_label_line_parse.rs
python/panlabel/: __init__.py  __main__.py  _find_panlabel.py
scripts/: dataset_generator.py
src/: error.rs  format_catalog.rs  format_detection.rs  lib.rs  main.rs
src/commands/: convert.rs  diff.rs  list_formats.rs  mod.rs  sample.rs  stats.rs  validate.rs
src/conversion/: mod.rs  report.rs
src/diff/: mod.rs  report.rs
src/hf/: acquire.rs  mod.rs  preflight.rs  resolve.rs
src/inspect/: mod.rs  report.rs
src/ir/: bbox.rs  coord.rs  ids.rs  io_adapter_common.rs  io_automl_vision_csv.rs  io_bbox_adapters_common.rs  io_bdd100k_json.rs  io_cityscapes_json.rs  io_cloud_annotations_json.rs  io_coco_json.rs  io_createml_json.rs  io_cvat_xml.rs  io_datumaro_json.rs  io_edge_impulse_labels.rs  io_hf_imagefolder.rs  io_hf_parquet.rs  io_json.rs  io_kaggle_wheat_csv.rs  io_kitti.rs  io_label_studio_json.rs  io_labelbox_json.rs  io_labelme_json.rs  io_marmot_xml.rs  io_oidv4_txt.rs  io_openimages_csv.rs  io_openlabel_json.rs  io_retinanet_csv.rs  io_sagemaker_manifest.rs  io_scale_ai_json.rs  io_super_json_common.rs  io_superannotate_json.rs  io_supervisely_json.rs  io_tfod_csv.rs  io_tfrecord.rs  io_udacity_csv.rs  io_unity_perception_json.rs  io_v7_darwin_json.rs  io_via_csv.rs  io_via_json.rs  io_voc_xml.rs  (+9 more)
src/sample/: mod.rs
src/stats/: html.rs  mod.rs  report.rs
src/validation/: mod.rs  report.rs
tests/: cityscapes_roundtrip.rs  cli.rs  cloud_annotations_roundtrip.rs  createml_roundtrip.rs  cvat_roundtrip.rs  eight_bbox_adapters_cli.rs  eight_bbox_adapters_roundtrip.rs  hf_imagefolder_roundtrip.rs  kitti_roundtrip.rs  label_studio_roundtrip.rs  labelbox_roundtrip.rs  labelme_roundtrip.rs  marmot_roundtrip.rs  proptest_coco.rs  proptest_cross_format.rs  proptest_cvat.rs  proptest_ir_json.rs  proptest_label_studio.rs  proptest_tfod.rs  proptest_tfrecord.rs  proptest_voc.rs  proptest_yolo.rs  retinanet_csv_roundtrip.rs  sagemaker_manifest_roundtrip.rs  scale_ai_roundtrip.rs  superannotate_roundtrip.rs  supervisely_roundtrip.rs  tfod_csv_roundtrip.rs  tfrecord_roundtrip.rs  unity_perception_roundtrip.rs  via_roundtrip.rs  voc_roundtrip.rs  vott_csv_roundtrip.rs  vott_json_roundtrip.rs  yolo_keras_roundtrip.rs  yolo_roundtrip.rs
tests/common/: mod.rs
tests/fixtures/: sample_invalid.coco.json  sample_invalid.ir.json  sample_invalid_multi_annotation_sets.label_studio.json  sample_invalid_polygon.cvat.xml  sample_invalid_result_type.label_studio.json  sample_legacy_completions.label_studio.json  sample_no_meta.cvat.xml  sample_rotated.label_studio.json  (+24 more)
(+3 files in other folders)
