[package]
name = "panlabel"
version = "0.1.0"
edition = "2021"
authors = ["Alex Strick van Linschoten <panlabel@realemail.net>"]
description = "The universal annotation converter"
license = "MIT"
repository = "https://github.com/strickvl/panlabel"
documentation = "https://docs.rs/panlabel"
keywords = ["cli", "annotation", "converter"]
categories = ["command-line-utilities", "command-line-interface"]
readme = "README.md"

# Enables the code to be used as a library
[lib]
name = "panlabel"
path = "src/lib.rs"

# Enables the CLI binary
[[bin]]
name = "panlabel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
csv = "1.3"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "microbenches"
harness = false
