[package]
name = "panlabel"
version = "0.1.0"
edition = "2021"
authors = ["Alex Strick van Linschoten <panlabel@realemail.net>"]
description = "The universal annotation converter"
license = "MIT"
repository = "https://github.com/strickvl/panlabel"
documentation = "https://docs.rs/panlabel"
keywords = ["cli", "annotation", "converter"]
categories = ["command-line-utilities", "command-line-interface"]
readme = "README.md"

# Enables the code to be used as a library
[lib]
name = "panlabel"
path = "src/lib.rs"

# Enables the CLI binary
[[bin]]
name = "panlabel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
csv = "1.3"
serde_yaml = "0.9"
imagesize = "0.14"
walkdir = "2.5"
roxmltree = "0.20"
rand = "0.9"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.13"

[[bench]]
name = "microbenches"
harness = false
