[package]
name = "panlabel"
version = "0.3.0"
edition = "2021"
authors = ["Alex Strick van Linschoten <panlabel@realemail.net>"]
description = "The universal annotation converter"
license = "MIT"
homepage = "https://github.com/strickvl/panlabel"
repository = "https://github.com/strickvl/panlabel"
documentation = "https://docs.rs/panlabel"
keywords = ["cli", "annotation", "converter"]
categories = ["command-line-utilities", "command-line-interface"]
readme = "README.md"

# Enables the code to be used as a library
[lib]
name = "panlabel"
path = "src/lib.rs"

# Enables the CLI binary
[[bin]]
name = "panlabel"
path = "src/main.rs"

[features]
default = []
fuzzing = []
hf-parquet = ["dep:arrow", "dep:parquet"]
hf-remote = ["dep:hf-hub", "dep:ureq", "dep:url", "dep:zip"]
hf = ["hf-parquet", "hf-remote"]

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
csv = "1.3"
serde_yaml = "0.9"
imagesize = "0.14"
walkdir = "2.5"
roxmltree = "0.20"
rand = "0.9"
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq", "rustls-tls"], optional = true }
ureq = { version = "3.2", features = ["json"], optional = true }
url = { version = "2.5", optional = true }
arrow = { version = "58.0.0", default-features = false, optional = true }
parquet = { version = "58.0.0", default-features = false, features = ["arrow", "json", "snap", "brotli", "flate2-zlib-rs", "lz4", "zstd"], optional = true }
zip = { version = "0.6.6", default-features = false, features = ["deflate"], optional = true }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.5"
tempfile = "3.13"

[[bench]]
name = "microbenches"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
