[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "panlabel"
version = "0.4.0"
description = "The universal annotation converter"
authors = [{ name = "Alex Strick van Linschoten" }]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["annotation", "converter", "coco", "yolo", "voc", "object-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/strickvl/panlabel"
Documentation = "https://github.com/strickvl/panlabel"
Changelog = "https://github.com/strickvl/panlabel/blob/main/CHANGELOG.md"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
module-name = "panlabel"
python-source = "python"
strip = true
